# blipcade

./: .gitignore  CMakeLists.txt  LICENSE  blipcade.d.ts  build-native.sh  build-wasm.sh  desdoc.md  generate_header.cmake  js_api_docs.md  main.cpp  shell.html
blipcade-api/: converters.cpp  converters.h
blipcade-renderer/: canvas.cpp  canvas.h  color.cpp  color.h  font.cpp  font.h  palette.cpp  palette.h  palette685.h  renderer.cpp  renderer.h  spritesheet.cpp  spritesheet.h  virtual_palette.h
blipcade-renderer/shaders/: convert_shaders.py  shader.frag  shader.vert
blipcade-runtime/: JsBindings.cpp  JsBindings.h  runtime.cpp  runtime.h
src/: cart.json
src/blipcade-api/: converters.cpp  converters.h
src/blipcade-audio/: audio.cpp  audio.h  echo.cpp  echo.h  effect.cpp  effect.h  reverb.cpp  reverb.h
src/blipcade-collision/: collider.cpp  collider.h  collision.cpp  collision.h  navmesh.cpp  navmesh.h  pathfinding.cpp  pathfinding.h  triangulation.cpp  triangulation.h
src/blipcade-devtool/: IconsForkAwesome.h  devtool.cpp  devtool.h  imgui-helpers.h  imgui-style.h  polygon.h  polygonEditor.cpp  polygonEditor.h  spriteEditor.cpp  spriteEditor.h
src/blipcade-ecs/: ECS.cpp  ECS.h
src/blipcade-loader/: cartridge.cpp  cartridge.h  project.cpp  project.h
src/blipcade-renderer/: canvas.cpp  canvas.h  color.cpp  color.h  font.cpp  font.h  graphics_types.h  palette.cpp  palette.h  palette685.h  postprocessing.cpp  postprocessing.h  renderer.cpp  renderer.h  spritesheet.cpp  spritesheet.h
src/blipcade-renderer/shaders/: convert_shaders.py  lighting_shader.frag  lighting_shader.vert  palette_shader.frag  postprocessing_shader.frag  transparent.frag
src/blipcade-runtime/: JsBindings.cpp  JsBindings.h  keystate.cpp  keystate.h  mousestate.cpp  mousestate.h  runtime.cpp  runtime.h
src/carts/: blipcade-cart.json  build-cart.py  ecs-test-build.json  ecs-test.json  scene-test-build.json  scene-test.json  testcart-build.json  testcart.json
src/carts-js/: package-lock.json  package.json  spack.config.js
src/carts-js/celeste/: balloon.js  big-chest.js  break_fall_floor.js  celeste.js  chest.js  colors.js  draw-main.js  draw-time.js  fakewall.js  fallfloor.js  flag.js  fly-fruit.js  fruit.js  game-manager.js  helpers.js  init_object.js  input.js  key.js  lifeup.js  load_room.js  message.js  next_room.js  orb.js  original.lua  platform.js  player-spawn.js  player.js  room-title.js  smoke.js  sound.js  spring.js  state.js  title-screen.js
src/carts-js/ecs-test/: ecs-test.js  entities.js
src/carts-js/ecs-test/state/: state.js
src/carts-js/framework/: colors.js  mouse.js  scene.js  widget.js
src/carts-js/framework/components/: button.js  rect.js
src/carts-js/graphics-lib/: lerp.js  movement.js  particle.js  text.js
src/carts-js/loader/: loader.js  particle-manager.js
src/carts-js/loader/loading/: glitch-animator.js  loading.js  particles.js
src/carts-js/loader/state/: state.js
src/carts-js/os/: os.js
src/carts-js/os/components/: file-list.js
src/carts-js/os/model/: file-manager.js
src/carts-js/os/state/: state.js
src/carts-js/scene/: entities.js  particles.js  scene.js
src/carts-js/scene/state/: state.js
src/carts-js/scene/systems/: animation.system.js  debug.system.js  draw.system.js  interactive-objects.system.js  level.system.js  lighting.system.js  messageSystem.js  movement.system.js  particles.system.js  sound.system.js  sprite-draw.system.js
src/carts-js/src/: index.js
src/carts-js/src/components/: current-sprite-data.js  header.js  sprite-viewer.js  spritesheet-viewer.js
src/carts-js/src/components/main/: divider.js  main.js  sprite-viewer.js
src/carts-js/src/components/main/sprite-edit/: sprite-controls.js
src/carts-js/src/framework/: b.js  colors.js  mouse.js  scene.js  widget.js
src/carts-js/src/framework/components/: button.js  text.js  toggle.js
src/carts-js/src/state/: state.js
src/carts-js/testcart/: backgrounds.js  testcart.js
src/carts-js/testcart/state/: state.js
src/projects/echoes-of-her/: main.scene.json  project.blipcade
src/projects/echoes-of-her/aseprite/: elena.aseprite  radio.aseprite
src/projects/echoes-of-her/charts/: cave.mermaid  forest.mermaid  town1.mermaid
src/projects/echoes-of-her/colliders/: bookshelf.json  painting.json  photoalbum.json  plant.json  player.json  radio.json  teddy.json
src/projects/echoes-of-her/colliders/fantasy-bedroom/: door.json  plants.json  wall.json
src/projects/echoes-of-her/colliders/hub/: town.json
src/projects/echoes-of-her/colliders/photoalbum/: left.json  right.json
src/projects/echoes-of-her/colliders/tavern/: door.json
src/projects/echoes-of-her/colliders/town-default/: home-door.json  home.json  tavern-door.json  tavern-outdoors-table.json  tavern-sign.json  tavern.json  town-exit.json  view.json
src/projects/echoes-of-her/navmeshes/: fantasy-bedroom.json  fantasy-town.json  hub-1.json  level1.json  level2.json  level3.json  tavern.json
src/projects/echoes-of-her/shaders/: pp.frag
src/projects/echoes-of-her/spritesheets/: cursor.json  elena.json  fantasy-bed.json  fantasy-bedroom.json  hub-middle-overlay.json  hub.json  icons.json  level1-bg-overlay.json  level1-bg.json  level2-bg-overlay.json  level2-bg.json  level3-bg.json  photoalbum.json  player-idle.json  player-walk.json  radio.json  teddy.json
src/projects/echoes-of-her/spritesheets/town/: tavern.json  town-default.json
src/projects/echoes-of-her/src/: entities.js  particles.js  scene.js
src/projects/echoes-of-her/src/levels/: 00-hub.js  01-fantasy-bedroom.js  02-town-default.js  03-tavern.js
src/projects/echoes-of-her/src/systems/: action-menu.system.js  animation.system.js  button.system.js  camera.system.js  debug.system.js  draw.system.js  event.system.js  interactive-objects.system.js  level.system.js  lighting.system.js  messageSystem.js  movement.system.js  sound.system.js  timer.system.js
src/resources/: palette.aseprite
src/tools/: build-carts.sh  extract_d_ts.py  extract_jsdoc.py  json_cart.hpp.in
